# DiskMap

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md
.history/: .gitignore_20260525105609  .gitignore_20260525105703
.mavis/plans/: plan.yaml
benches/: large_tree.rs  perf.rs
benches/baselines/: large_tree.txt
packaging/macos/: README.md
scripts/: package-macos.sh
src/: app.rs  cleanup.rs  commands.rs  db.rs  diagnostics.rs  duplicates.rs  export.rs  format.rs  i18n.rs  insights.rs  lib.rs  main.rs  platform.rs  profiles.rs  rules.rs  scanner.rs  snapshot.rs  storage.rs  tree.rs  treemap.rs  views.rs  watcher.rs
src/app/: analysis_actions.rs  cleanup_actions.rs  export_actions.rs  navigation.rs  profile_actions.rs  rule_actions.rs  scan_session.rs  search_nav.rs  status.rs  treemap_state.rs
src/app/panels/: analysis.rs  command_palette.rs  details.rs  filter_presets.rs  mod.rs  roots_menu.rs  rules_section.rs  sections.rs  settings.rs  trash_confirmation.rs  treemap_view.rs
tests/: rules_fixtures.rs
