[package]
name = "disk-map"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.34"
egui = "0.34"

jwalk = "0.8"
crossbeam-channel = "0.5"

anyhow = "1"
thiserror = "2"

open = "5"
arboard = "3"

serde = { version = "1", features = ["derive"] }
libc = "0.2"
notify = "7"
rusqlite = { version = "0.32", features = ["bundled"] }
fixedbitset = "0.5"
rustc-hash = "2"
smallvec = "1"
lru = "0.12"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "perf"
harness = false
