[package]
name = "disk-map"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.34", features = ["persistence"] }
egui = "0.34"

jwalk = "0.8"
crossbeam-channel = "0.5"

anyhow = "1"

open = "5"

rusqlite = { version = "0.32", features = ["bundled"] }
fixedbitset = "0.5"
rustc-hash = "2"
smallvec = "1"
lru = "0.12"
notify = "8.2.0"
trash = "5.2.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "perf"
harness = false

[[bench]]
name = "large_tree"
harness = false
