[package]
name = "disk-map"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
eframe = { version = "0.34", features = ["persistence", "glow"] }
egui = "0.34"
egui-phosphor = "0.12"
sys-locale = "0.3.2"

jwalk = "0.8"
crossbeam-channel = "0.5"

anyhow = "1"

open = "5"

rusqlite = { version = "0.32", features = ["bundled"] }
fixedbitset = "0.5"
rustc-hash = "2"
smallvec = "1"
lru = "0.12"
notify = "8.2.0"
trash = "5.2.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "perf"
harness = false

[[bench]]
name = "large_tree"
harness = false
